--- a/mystyle.css
+++ b/mystyle.css
@@ -5,53 +5,58 @@ body {
 	padding:0;
 }
 .header {
+	position:fixed;	
 	top:0;
+	width:100%;
 	background-color:black;
 	color:white;
 	text-align:center;
 	height:80px;
-	line-height:80px;
 	vertical-align:middle;
 }
 .side {
-	vertical-align:middle;	
+	position:fixed;
+	top:80px;
 	min-width:1000px;
 	width:100vw;
+	height:80px;
 	background-color:#cccccc;
 	color:#00001F;
 	display:inline-block;
 	text-align:center;
-	height:60px;
-	line-height:60px;
-	padding-bottom:15px;
+	vertical-align:top;
 }
 .main {
-	position: absolute;
+	position: fixed;
+	top:160px;
 	vertical-align:top;
 	display:inline-block;
 	background-color:white;
 	color:black;
 	display:inline-block;
+	padding:5px 20px;
 	z-index:-1;
-}
+	}
 .footer {
+	position: fixed;
+   	left: 0;
+   	bottom: 0;
+   	width: 100%;
 	background-color:yellow;
 	color:black;
 	text-align:center;
-	height:60px;
-	line-height:60px;
 	vertical-align:middle;
-	min-width:100vw;
-	position: absolute;
-	top:calc(100vh - 90px);
-	display:inline-block;
+	display:block;
 }
 .menu{
 	list-style-type:none;
 	text-align:center;
+	margin-left:-40px;
 }
 .menu > li {
-	float:left;
+	display:inline-block;
+	vertical-align:top;
+	text-align:center;
 }
 .menu > li > a {
 	text-decoration:none;
@@ -60,11 +65,11 @@ body {
 	color:white;
 	background-color:#00009F;
 	padding:5px;
-	text-align:center;
-	vertical-align:middle;
-	border:2px solid white;
-	display:block;
 	width:200px;
+	vertical-align:middle;
+	width:parent;
+	display:block;
+	border:2px solid white;	
 }
 .menu > li > a:link {
 	color:white;
@@ -84,6 +89,13 @@ body {
 	display:none;
 	list-style-type:none;
 	text-align:center;
+}
+.submenu > li {
+	width:174px;
+	display:block;
+	text-align:center;
+	vertical-align:top;
+	list-style-position:inside;
 }
 .submenu > li > a {
 	text-decoration:none;
@@ -113,8 +125,9 @@ body {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
 	.side {
+		position: relative;
 		vertical-align:middle;
 		min-width:auto;
 		width:100vw;
@@ -124,38 +137,39 @@ body {
 		text-align:center;
 		height:auto;
 	}
-	
 	.main {
-		position: static;
+		position: relative;
+		top:80px;
 		vertical-align:top;
 		display:inline-block;
 		background-color:white;
 		color:black;
 	}
-	
 	.menu {
 		list-style-type: none;
 		margin-right:40px;
+		margin-left:-10px;
 	}
-	
 	.menu > li {
-		float:none;
+		display:block;
 	}
-	
 	.menu > li > a {
-		width:auto;
+
+		display:block;
+		width:100%;
+		margin-right:40px;
 	}
-	
 	.submenu {
 		display:none;
 		list-style-type:none;
 		text-align:center;
 		margin-right:40px;
 	}
-	
-	.footer {
-		position:static;
-		display:inline-block;
+	.submenu > li {
+		width:100%;
+	}
+	.submenu > li > a{
+		width:100%;
 	}
 }
 
